# HKN-POS

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  hkn_pos.db  hknctl  pyproject.toml  setup.sh
examples/: 01_curl_client.sh  02_flask_client.py  03_async_client.py  04_polling_client.py  05_node_client.js  06_go_client.go  07_rust_client.rs  README.md
examples/07_rust_client/: Cargo.toml
examples/07_rust_client/src/: main.rs
hkn_pos/: __init__.py  api.py  comm_log.py  config.py  email_monitor.py  events.py  main.py  models.py  pdf_parser.py  storage.py  webhook.py
tests/: test_api.py  test_events.py  test_pdf_parser.py  test_storage.py
